Fix AbstractAlloySmelterBlockEntity Add Recipe Book Categories